Netlify Deploy 5 - fixed front end on mobile

--- a/public/output.css
+++ b/public/output.css
@@ -2694,10 +2694,6 @@ html {
   padding: 1rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .p-8 {
   padding: 2rem;
 }
